# ibmi_etl

./: AGENTS.md  README.md  pyproject.toml
configs/: example_table.toml
docs/: CONTRIBUTING.md  PROJECT_STATUS.md
src/ibmi_etl/: __init__.py
src/ibmi_etl/core/: __init__.py  censor_cast.py  keyring_adapter.py  log.py  network_copy.py  odbc_client.py  partition_merge.py  query_gen.py
src/ibmi_etl/lint/: __init__.py  db2i_sql_rules.toml  expr_sandbox.py  parser.py
tests/: test_keyring_adapter.py  test_package_structure.py
