[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibmi-etl"
version = "0.1.0"
description = "IBM i (Db2 for i) ETL toolkit for incremental Parquet pipelines"
authors = [
  { name = "i-Series Data Warehouse Maintainers" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
